Draw block cursor outline with MiterJoin

Prevents artifacts at the corners when using DPI scaling, e.g. the
screenshot at the bug report with 2.00 scale.

BUG: 483197
(cherry picked from commit 65265067804f2cacdcdaccd9e51dc86dc1cd596b)